--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,22 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <h1>This is Home Page</h1>
+    <h1>This is a form</h1>
+    <form action="/get-form-data" method="post">
+      <input type="text" placeholder="Enter your username" name="username" />
+      <br />
+      <br />
+      <input type="text" placeholder="Enter your email" name="email" />
+      <br />
+      <br />
+      <input
+        type="password"
+        placeholder="Enter your password"
+        name="password"
+      />
+      <br />
+      <br />
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
